# ome

./: README.md  dune-project  ome.opam
src/: dune  euclideanSpace.ml  matrix.ml  vectorSpace.ml
test/: dune  ome.ml
