(lang dune 3.2)

(name ome)

(generate_opam_files true)

(source
 (github FrugBatt/ome))

(authors "Hugoooo_")

(maintainers "Hugoooo_")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ome)
 (synopsis "oCaml Math Engine")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
